# cxxlogger

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  build.sh  classcxxlog_1_1Logger-members.html  classcxxlog_1_1Logger.html  classcxxlog_1_1Logger.js  classcxxlog_1_1transport_1_1OutputStream-members.html  classcxxlog_1_1transport_1_1OutputStream.html  classcxxlog_1_1transport_1_1OutputStream.js  classes.html  conanfile.txt  conceptcxxlog_1_1Loggable.html  concepts.html  concepts.js  dir_4c375a82c31ed1835f8fa0f8c7fa9531.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_e68e8157741866f444e17edd764ebbae.html  functions.html  functions_func.html  index.html  index.js  logger_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  transport_8h_source.html  version.json
.github/workflows/: main.yml
cmake/: configure_compiler.cmake
doc/: doxyfile.in  readme.md
docker/: Dockerfile.clang16  Dockerfile.gcc11  Dockerfile.gcc13
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  concepts_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt
src/include/cxxlog/: logger.h  transport.h
src/test/: CMakeLists.txt  test_logger.cxx  test_transport.cxx
